--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "instagram-downloader",
+  "name": "instagram-bulk-downloader",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "ig.js",
   "dependencies": {
     "https": "^1.0.0",
     "node-fetch": "^2.6.0"
@@ -12,6 +12,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "jamiedotsk",
   "license": "ISC"
 }
