--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "instagram-bulk-downloader",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
   "main": "ig.js",
   "dependencies": {
@@ -12,6 +12,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "jamiedotsk",
+  "author": "jamiekrizko",
   "license": "ISC"
 }
